crates/rome_cli/tests/snapshots/main_format/indent_size_parse_errors_overflow.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
failed to parse argument '--indent-size': failed to parse '257': number too large to fit in target type
```


