crates/rome_cli/tests/snapshots/main_format/indent_style_parse_errors.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
failed to parse argument '--indent-style': failed to parse 'invalid': Value not supported for IndentStyle
```


