crates/rome_cli/tests/snapshots/main_format/line_width_parse_errors_overflow.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
failed to parse argument '--line-width': failed to parse '321': TryFromIntError(LineWidthFromIntError(321))
```


